k8s/tests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-runner
spec:
  selector:
    matchLabels:
      app: test-runner
  template:
    metadata:
      labels:
        app: test-runner
    spec:
      containers:
        - name: test-runner
          image: netnodse/robust-test-runner
          resources: {}
          volumeMounts: 
          - mountPath: /var/run/secrets/tokens
            name: api-token
      serviceAccountName: test-runner
      volumes:
      - name: api-token
        projected:
          sources:
          - serviceAccountToken:
              path: api-token
              expirationSeconds: 7200
              audience: api
