k8s/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  ports:
    - port: 4567
      targetPort: 4567
  selector:
    app: admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: netnodse/robust-admin
          resources: {}
          ports:
            - containerPort: 4567
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: admin.robust.gcloud.netnod.se
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 4567
  tls:
  - hosts:
    - admin.robust.gcloud.netnod.se
    secretName: admin-robust-gcloud-netnod-se-cert
