k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robust-service
spec:
  ports:
    - port: 3000
  type: ClusterIP
  selector:
    app: robust-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robust-service
spec:
  selector:
    matchLabels:
      app: robust-service
  template:
    metadata:
      labels:
        app: robust-service
    spec:
      containers:
        - name: robust-service
          image: iteam1337/robust-service
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robust-service-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-public"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: dev.robust.gcloud.netnod.se
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: robust-service
                port:
                  number: 3000
  tls:
  - hosts:
    - dev.robust.gcloud.netnod.se
    secretName: dev-robust-gcloud-netnod-se-cert
