k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 3000
  type: ClusterIP
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: iteam1337/robust-web
          ports:
            - containerPort: 3000
          resources: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-public"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: dev.robust.gcloud.netnod.se
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 3000
  tls:
  - hosts:
    - dev.robust.gcloud.netnod.se
    secretName: dev-robust-gcloud-netnod-se-cert
